src/components/TaskList/taskList.module.scss
@import '../../styles/imports';

.taskList {
    width: 100%;
    max-width: 520px;
    max-height: calc(100% - 156px);
    overflow-y: auto;
    padding: 16px 0px;

    @media (max-width: $mobile) {
        // position: fixed;
        // top: 32px;
        padding: 16px 4px;
    }

    -ms-overflow-style: none;
    scrollbar-width: none;

    &::-webkit-scrollbar {
        display: none;
    }

    .tasks {
        @include displayFlex(column, center, flex-start, 16px);
    }
}

